// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText when input is blank it should not have filled state 1`] = `
<div>
  <input
    class="p-inputtext p-component"
  />
</div>
`;

exports[`InputText when input is disabled it should render as disabled 1`] = `
<div>
  <input
    class="p-inputtext p-component p-disabled"
    disabled=""
  />
</div>
`;

exports[`InputText when input is enabled then input accepts data entry and have filled state 1`] = `
<div>
  <input
    class="p-inputtext p-component p-filled"
  />
</div>
`;

exports[`InputText when input is is set for validation only 1`] = `
<div>
  <input
    class="p-inputtext p-component p-filled"
  />
</div>
`;
